css/style.css
html,
body {
  padding: 0;
  margin: 0;
	height: 100%;
  background-color: #fff;
}

.flex-container  {
  display: flex;
  /*centers the text horizontally*/
  justify-content: center;

  /*centers the text vertically*/
  align-items: center;

  flex-direction: column;
  min-height: 100%;
  color: #fff;
  font-size: 1.2rem;
  background: #ffffff;
}

.content {
  /* border: 1px solid salmon; */
}

h1 {
	font-family: 'JetBrains Mono', monospace;
	font-size: 1.5rem;
	font-weight: 300;
	letter-spacing: -1px;
	line-height: 96px;
  color:  #051438;
  margin-bottom: 0;
}


strong {
  display: block;
	font-family: Poppins, sans-serif;
	font-size: 80px;
	font-weight: 700;
	line-height: 96px;
  color:  #051438;
	max-width: 2rem;
  margin-bottom: 0;
  max-width: 50rem;
}

p {
  display: block;
	font-family: Poppins, sans-serif;
	font-size: 40px;
	font-weight: 300;
  color:  #051438;
  max-width: 50rem;
}

p a {
  text-decoration: none;
  border: 1px solid;
  color: #fff;
  background-color: #051438c5;
  padding: 0.5rem;
  /* border-radius: 10px; */
}

p a:hover{
  background-color: #051438;
}


::selection {
  background-color: #16E9E8;
}







/* Media Queries */

/* Laptop */
@media (max-width: 1366px){
  /* font-size: 55%; */
}
/* Tablet */
@media (max-width: 758px){
  /* font-size: 55%; */
  .content {
    /* border: 1px solid salmon; */
  }

  h1 {
    font-size: 1rem;
    max-width: 25rem;
  }

  strong {
    font-size: 3rem;
    line-height: 1;
    max-width: 30rem;
    /* border: 1px solid salmon; */
  }

  p {
    display: flex;
    font-size: 30px;
    color:  #051438;
    max-width: 25rem;
    flex-direction: column;
    /* border: 1px solid salmon; */
  }
  
  p a {
    font-size: 1.5rem;
    margin-top: 0.5rem;
    width: fit-content;
  }

  p a:hover{
    background-color: #051438;
  }


}

/* Mobile Phone */
@media (max-width: 450px){
  .content {
    /* border: 1px solid salmon; */
  }

  h1 {
    font-size: 1rem;
    max-width: 25rem;
  }

  strong {
    font-size: 3rem;
    line-height: 1;
    max-width: 23rem;
    /* border: 1px solid salmon; */
  }

  p {
    display: flex;
    font-size: 2rem;
    flex-direction: column;
    /* border: 1px solid salmon; */
  }
  
  p a {
    font-size: 1rem;
    margin-top: 0.5rem;
    width: fit-content;
  }

  p a:hover{
    background-color: #051438;
  }

}

